deploy/4_ingress/3_minio/0_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: minio-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-access-log: "false"
spec:
  tls:
    - hosts:
        - minio.hoshi-note.ixk.me
      secretName: minio-hoshi-note-tls
  rules:
    - host: minio.hoshi-note.ixk.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  number: 9090
